--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/katcy/better-todo-comments"
+    "url": "https://github.com/katcy/better-todo-comments.git"
   },
+  "contributors": [
+    {
+      "name": "Manu Mathew",
+      "url": "https://github.com/manu-27993/"
+    }
+  ],
   "publisher": "Karthik Chinnasamy",
+  "homepage": "https://katcy.github.io/better-todo-comments/",
+  "bugs": {
+    "url": "https://github.com/katcy/better-todo-comments/issues",
+    "email": "karthikchinnasamy9494@gmail.com"
+  },
   "engines": {
     "vscode": "^1.80.0"
   },
