feat: updated README

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "contributors": [
     {
       "name": "Manu Mathew",
+      "email": "manu.27993@gmail.com",
       "url": "https://github.com/manu-27993/"
     }
   ],
