fix: updated logo

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "Snippets",
     "Other"
   ],
-  "icon": "Commentify.png",
+  "icon": "media/Commentify.png",
   "keywords": [
     "todo",
     "comment",
