--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "commentify",
   "displayName": "Commentify",
   "description": "Provides the ability to add and search parameterised TODO comments",
-  "version": "1.0.0",
+  "version": null,
   "author": {
     "name": "katcy",
     "email": "karthikchinnasamy9494@gmail.com"
@@ -150,19 +150,21 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "release": "standard-version"
   },
   "devDependencies": {
-    "@types/vscode": "^1.80.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
+    "@types/vscode": "^1.80.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.3",
-    "@vscode/test-electron": "^2.3.2"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.1.3"
   }
 }
